# NotebookCocos2d

./: .gitmodules  CMakeLists.txt  CoreAppDelegateCocosNodePlusPlus.cpp  CoreAppDelegateCocosNodePlusPlus.h  README.md  StateMachineNote.cpp  StateMachineNote.h  main.cpp
NotebookCocos2d/: CoreAppDelegateNotebookCocos2d.cpp  CoreAppDelegateNotebookCocos2d.h  StateMachineNotebookCocos2d.cpp  StateMachineNotebookCocos2d.h
NotebookCocos2d/Scenes/: MainWindow.cpp  MainWindow.h  MainWindow.ui  SceneMain.cpp  SceneMain.h
Scenes/: ISceneMain.h  SceneMain.cpp
subs/: CMakeLists.txt
